ingress/ingress-staging-covid19inv-alpha.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: covid19inv-alpha-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - covid-19inventory.tbs.alpha.canada.ca
    secretName: covid19inv-tls-secret-staging
  rules:
  - host: covid-19inventory.tbs.alpha.canada.ca
    http:
      paths:
      - backend:
          serviceName: covid19inv-nginx
          servicePort: 80
        path: /
